start working on detail activity